# visca-bridge

./: .gitignore  CHANGELOG.md  INTEGRATION_SUMMARY.md  LICENSE  README.md  ROADMAP.md  VISCA_TCP_README.md  index.html  install.sh  main.py  package-lock.json  presets.json  pyproject.toml  serial_transport.py  test_tcp_client.py  visca-bridge.service  visca_bridge.py  visca_presets.py  visca_tcp_server.py  visca_udp_server.py
Frontend/: .env  package-lock.json  package.json
Frontend/src/: App.tsx  main.tsx  types.ts
Frontend/src/components/: AdvancedPresetControl.tsx  EventLog.tsx  FocusTab.tsx  ManualTab.tsx  PanTiltTab.tsx  PictureTab.tsx  PowerTab.tsx  PresetsTab.tsx  SnackbarFeedback.tsx  ZoomTab.tsx
visca/: __init__.py  config.py  logging.py  serial_bridge.py  tcp_server.py  utils.py
visca_bridge/: pom.xml
visca_bridge/src/main/java/de/robineb/: Main.java
visca_bridge/src/main/java/de/robineb/Handler/: ClientHandler.java  ViscaHandler.java
visca_bridge/src/main/java/de/robineb/Server/: ViscaIpServer.java
